--- a/client/assets/style/style.css
+++ b/client/assets/style/style.css
@@ -5,5 +5,20 @@
 }
 
 .bad-header {
-  height: 11hv;
+  height: 11vh;
+}
+
+.small-text {
+  font-size: small;
+}
+
+.profile-img {
+  height: 15vh;
+  aspect-ratio: 1/1;
+  object-fit: cover;
+  object-position: center;
+}
+
+.post {
+  border-bottom: 2px solid #7400aa;
 }
